--- a/src/app/platform/auditForm/audit-document/audit-document.component.html
+++ b/src/app/platform/auditForm/audit-document/audit-document.component.html
@@ -300,7 +300,7 @@
             </div>
             <hr>
             <!-- Download Buttons start-->
-            <div class="form-group margin-bottom-0">
+            <div class="form-group margin-bottom-0" *ngIf="showExportFile == true">
               <label class="font-size-14 font-weight-600 ">Export:</label>
               <div class="btn-group btn-group-justified">
                 <div class="btn-group" role="group">
