--- a/src/app/platform/Reports/driver-profile-reporting/driver-profile-reporting.component.html
+++ b/src/app/platform/Reports/driver-profile-reporting/driver-profile-reporting.component.html
@@ -80,12 +80,6 @@
                         <div class="col-md-12">
                           <p style="margin-top: -13px; background-color: white; max-width: 12%;">Fleets</p>
                           <div class="form-group">
-                            <!-- <select class="form-control" formControlName="fleetGroup" name="selectedGroup"
-                              placeholder="Select Fleet Group" (change)="FleetGroupDropDownChange($event.target.value)">
-                              <option value="">Select Fleet Group</option>
-                              <option *ngFor="let fleetGroup of fleetGroup" [value]="fleetGroup.id">{{fleetGroup.name}}
-                              </option>
-                            </select> -->
                             <p-multiSelect [options]="fleetGroup" formControlName="fleetGroup" optionLabel="name"
                               styleClass="prime-dropdown" filter="true" filterPlaceHolder="Select Fleet"
                               (onChange)="FleetGroupDropDownChange($event)" defaultLabel="Select Fleet">
@@ -93,12 +87,6 @@
                           </div>
 
                           <div class="form-group">
-                            <!-- <select class="form-control" formControlName="fleet" name="selectedGroup"
-                              placeholder="Select Vehicle" (change)="DriverDropDownChange($event.target.value)">
-                              <option value="">Select Vehicle</option>
-                              <option *ngFor="let vehicle of fleets" [value]="vehicle.id">{{vehicle.name}}
-                              </option>
-                            </select> -->
                             <p-multiSelect [options]="fleets" formControlName="fleet" optionLabel="name"
                               styleClass="prime-dropdown" filter="true" filterPlaceHolder="Select Fleet"
                               (onChange)="VehicleDropDownChange($event)" defaultLabel="Select Fleet">
@@ -333,14 +321,6 @@
                           class="table margin-bottom-0 table-condensed1 table-bordered1 text-wrap theme-table1"
                           style="border: 1px solid #ebebeb;" mat-table [dataSource]="users" mat-elevation-z8>
 
-
-                          <!-- <ng-container matColumnDef="buton">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Expandibles</th>
-                            <td mat-cell *matCellDef="let row">
-                              <span id="content" class=""></span>
-                            </td>
-                          </ng-container> -->
-
                           <ng-container matColumnDef="driver_id">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header>Driver ID</th>
                             <td mat-cell *matCellDef="let row">
@@ -396,12 +376,6 @@
                             <td mat-cell *matCellDef="let row">
                               {{ (row.total_distance_travelled == null) ? '-': row.total_distance_travelled }}</td>
                           </ng-container>
-
-
-
-
-
-
 
                           <tr mat-header-row *matHeaderRowDef="vehicleUsageReport"></tr>
                           <tr mat-row *matRowDef="let row; columns: vehicleUsageReport;" matRipple class="element-row"
@@ -835,7 +809,7 @@
                           <tr mat-header-row *matHeaderRowDef="ObdReport"></tr>
                           <tr mat-row *matRowDef="let row; columns: ObdReport;"></tr>
                         </table>
-                        <div *ngIf="users === '' " class="no-records">No records found</div>
+                        <div *ngIf="users == '' || users === undefined" class="no-records">No records found</div>
                         <mat-paginator translate="no" #userPaginator [length]="totalUserLength" [hidePageSize]="true"
                           showFirstLastButtons [pageSize]="10">
                         </mat-paginator>
